# client-python-ova

./: README.md  requirements.txt  setup.cfg  setup.py
shakenfist_client_ova/: __init__.py
