[metadata]
name = shakenfist-client-ova
summary = Shaken Fist: an opinionated minimal cloud
license = Apache2
description_file = README.md
author = Michael Still
author_email = mikal@stillhq.com
home_page = https://madebymikal.com/shakenfist
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

skip_changelog = True
